fix: delete console log and change z-index at header image

--- a/src/Pages/School/Navigations/CoursesCreating/RedactorCourse/CoursePage/Blocks/styles/headerBlock.module.scss
+++ b/src/Pages/School/Navigations/CoursesCreating/RedactorCourse/CoursePage/Blocks/styles/headerBlock.module.scss
@@ -67,6 +67,7 @@
     height: 100%;
     border-radius: 24px;
     position: relative;
+    z-index: 4;
 
     img {
       display: inline-block;
